--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.8.0",
+    "@astrojs/vercel": "7.8.1",
     "@auth/drizzle-adapter": "^1.4.2",
     "@libsql/client": "^0.10.0",
-    "astro": "^4.14.5",
+    "astro": "4.15.4",
     "astro-icon": "^1.1.1",
     "astro-tabs": "^0.1.8",
     "auth-astro": "^4.1.2",
