--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@astrojs/vercel": "7.8.1",
     "@auth/drizzle-adapter": "^1.4.2",
     "@libsql/client": "^0.10.0",
+    "@nanostores/react": "^0.7.3",
     "astro": "4.15.4",
     "astro-icon": "^1.1.1",
     "astro-tabs": "^0.1.8",
@@ -28,10 +29,12 @@
     "cloudinary": "^2.4.0",
     "drizzle-orm": "^0.33.0",
     "gsap": "^3.12.5",
+    "nanostores": "^0.11.3",
     "parallax-js": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
+    "sonner": "^1.5.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   },
