--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "drizzle-orm": "^0.33.0",
     "gsap": "^3.12.5",
     "parallax-js": "^3.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0-rc-f2df5694-20240916",
+    "react-dom": "^19.0.0-rc-f2df5694-20240916",
     "react-quill": "^2.0.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
@@ -38,13 +38,17 @@
   "devDependencies": {
     "@iconify-json/mdi": "^1.2.0",
     "@types/parallax-js": "^3.1.3",
-    "@types/react": "^18.3.4",
-    "@types/react-dom": "^18.3.0",
     "drizzle-kit": "^0.24.2",
     "husky": "^9.1.5",
     "prettier": "^3.3.3",
     "pretty-quick": "^4.0.0",
-    "sass-embedded": "^1.78.0"
+    "sass-embedded": "^1.78.0",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc"
   },
   "husky": {
     "hooks": {
