--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/react": "^3.6.2",
-    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/tailwind": "^5.1.1",
     "@astrojs/vercel": "7.8.1",
     "@auth/drizzle-adapter": "^1.4.2",
     "@libsql/client": "^0.10.0",
-    "astro": "4.15.4",
+    "astro": "^4.15.9",
     "astro-icon": "^1.1.1",
     "astro-tabs": "^0.1.8",
     "auth-astro": "^4.1.2",
