--- a/package.json
+++ b/package.json
@@ -45,13 +45,10 @@
     "drizzle-kit": "^0.24.2",
     "husky": "^9.1.5",
     "prettier": "^3.3.3",
-    "pretty-quick": "^4.0.0",
-    "sass-embedded": "^1.78.0"
+    "pretty-quick": "^4.0.0"
+   
   },
-  "overrides": {
-    "@types/react": "npm:types-react@rc",
-    "@types/react-dom": "npm:types-react-dom@rc"
-  },
+ 
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
