--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/netlify": "^5.5.3",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.1",
-    "@astrojs/vercel": "7.8.1",
     "@auth/drizzle-adapter": "^1.4.2",
     "@iconify-json/carbon": "^1.2.1",
     "@libsql/client": "^0.10.0",
@@ -45,9 +45,7 @@
     "husky": "^9.1.5",
     "prettier": "^3.3.3",
     "pretty-quick": "^4.0.0"
-   
   },
- 
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
