--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/react": "^3.6.2",
     "@astrojs/tailwind": "^5.1.1",
+    "@astrojs/vercel": "^7.8.1",
     "@auth/drizzle-adapter": "^1.4.2",
     "@iconify-json/carbon": "^1.2.1",
     "@libsql/client": "^0.10.0",
