--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cloudinary": "^2.4.0",
     "drizzle-orm": "^0.33.0",
     "gsap": "^3.12.5",
+    "install": "^0.13.0",
     "nanostores": "^0.11.3",
     "parallax-js": "^3.1.0",
     "react-quill": "^2.0.0",
